# fabricant-prod

./: .gitignore  .gitmodules  README.md  add_user.py  affine.yaml  ansible.cfg  ansible_deploy_service.py  ansible_deploy_service.service  authentik.yaml  become-pass.sh  compose.affine.yml  compose.authentik.yml  compose.grafana.yml  compose.label-studio.yml  compose.mlflow.yml  compose.otter.yml  compose.outline.yml  compose.wikijs.yml  compose.yml  docker_ubuntu_24.yaml  fabricant_users.yaml  inventory.yaml  kube.yaml  label_studio.yaml  monitoring.yaml  node_exporter.service  playbook.yaml  pyproject.toml  ufw.yml  unattended-upgrades.yml  web_services.yaml
.github/workflows/: deploy.yml
affine/postgres/config/: pg_hba.conf
affine/postgres/scripts/: 2025-09-04_create_users.sql
alertmanager/: alertmanager.yml
authentik/postgres/config/: pg_hba.conf
authentik/postgres/scripts/: 2025-08-14_create_users.sql
docker/: daemon.json  docker_secrets.yml
grafana/: grafana.ini
loki/: loki-config.yaml  promtail-config.yaml
mlflow/config/: Dockerfile  docker-entrypoint.sh  init-db.sql  pyproject.toml
netplan/: 01-fabricant-prod.yml  01-fabricant.yml
outline/: docker.env
postgres/config/: pg_hba.conf
prometheus/: prometheus.yml
scripts/: deploy_authentik_pass.sh  deploy_authentik_traefik_token.sh  deploy_label_studio_pass.sh  deploy_outline_secrets.sh  deploy_wikijs_pass.sh  docker_network_reset.sh  get_docker_gid.sh
