[tool.poetry]
name = "fabricant"
version = "0.1.0"
description = ""
authors = ["Nathan Hui <nthui@ucsd.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.4.0"
ansible-core = "^2.17.4"
platformdirs = "^4.3.6"
gitpython = "^3.1.43"
prometheus-client = "^0.21.0"
docker = "^7.1.0"
pyyaml = "^6.0.2"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"